# aero-monorepo

./: LICENSE.md  README.md
circuits/: Nargo.toml  Prover.toml  README.md
circuits/src/: invoice.nr  lending.nr  main.nr  test_integration.nr  test_utils.nr  utils.nr  zktls.nr
circuits/tests/: README.md
interface/: README.md  package.json  pnpm-lock.yaml
interface/src/app/: globals.css  layout.tsx  page.tsx
interface/src/app/borrow/: page.tsx
interface/src/app/dashboard/: page.tsx
interface/src/components/: aos-init.tsx  navbar.tsx  vault-modal.tsx
interface/src/hooks/: use-wallet.ts
interface/src/lib/: stellar.ts  zk-mock.ts
interface/tests/: render.test.tsx
soroban/: Cargo.toml  README.md
soroban/mock-usdc/: Cargo.toml
soroban/mock-usdc/src/: lib.rs
soroban/src/: lib.rs  loan.rs  pool.rs  types.rs  verifier.rs
soroban/test_snapshots/: test_deposit_and_pool_stats.1.json  test_full_loan_lifecycle.1.json  test_init_and_admin.1.json  test_liquidation_flow.1.json  test_mock_usdc_mint_and_transfer.1.json  test_nullifier_prevents_double_spend.1.json  test_repay_wrong_borrower_fails.1.json  test_xlm_deposit_and_loan.1.json
soroban/tests/: test.rs
verifier/: Cargo.toml  README.md
verifier/src/: honk.rs  inputs.rs  keys.rs  lib.rs  types.rs
verifier/test_snapshots/: test_double_init_fails.1.json  test_init_and_get_vk.1.json  test_invalid_proof_format_rejected.1.json  test_nullifier_double_spend_prevention.1.json  test_verify_public_input_extraction.1.json  test_verify_without_nullifier.1.json
verifier/tests/: test.rs
(+2 files in other folders)
