[workspace]
members = ["mock-usdc"]
resolver = "2"

[package]
name = "aero-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"
aero-verifier = { path = "../verifier" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
mock-usdc = { path = "mock-usdc" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true